--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My food diary</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <p>Breakfast : Chicken breast and soy milk</p>
+    <img src="images (1).jpg">
+    <p>Lunch : Pork fried rice and salad</p>
+    <img src="images2.jpg">
+    <p>Dinner : salad</p>
+    <img src="images3.jpg">
+    
     
 </body>
 </html>
