--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <p>Breakfast : Chicken breast and soy milk</p>
-    <img src="images (1).jpg">
+    <img src="img1.jpg">
     <p>Lunch : Pork fried rice and salad</p>
-    <img src="images2.jpg">
+    <img src="img2.jpg">
     <p>Dinner : salad</p>
-    <img src="images3.jpg">
+    <img src="img3.jpg">
     <p> ^_^ </p>
     
 </body>
